ecmascript/parser/tests/test262-error-references/fail/4fd864d1c4df25b0.js.stderr
error: Not a pattern
 --> $DIR/tests/test262-parser/fail/4fd864d1c4df25b0.js:1:4
  |
1 | ({ get test() { } }) => 42
  |    ^^^^^^^^^^^^^^

